# catalyst-forge-playground

./: .gitignore  README.md  blueprint.cue
.github/workflows/: ci.yml
examples/go/: Earthfile  README.md  blueprint.cue  go.mod
examples/go/cmd/: main.go  main_test.go
examples/python/: README.md
examples/python/src/hello/: hello.py
examples/rust/: Cargo.toml  Earthfile  README.md  blueprint.cue  cross.sh
examples/rust/release/: hello  rust
examples/rust/src/: main.rs
users/jmgilman/: Earthfile  blueprint.cue  pyproject.toml
users/jmgilman/tests/: hello_test.py
