[project]
name = "hello"
version = "0.1.0"
description = "A simple hello world CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
]

[project.scripts]
hello = "hello.hello:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hello"]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "pytest>=8.3.3",
    "ruff>=0.6.5",
]
